Tweak index page to increase image contrast, fix tagline

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -165,7 +165,7 @@ h3 {
 }
 
 .tagline {
-  font-size: 2.5em;
+  font-size: 2em;
 }
 
 .link-padding:before { 
